# foo_upnp_mac

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  README.md  manifest.json  skills-lock.json
.claude/: settings.local.json
.claude/skills/: code-review  diagnosing-bugs  grill-me  grill-with-docs  handoff
.github/workflows/: ci.yml
.gitlab/issue_templates/: bug.md  feature_request.md  server_compatibility.md
.gitlab/merge_request_templates/: default.md
component_macos/: CMakeLists.txt  fb2k_sdk.cmake
component_macos/foo_dms_browser/: ComponentEntry.mm  DmsAlbumArtFallback.mm  DmsBrowseSession.hpp  DmsBrowserUiElement.mm  DmsBrowserViewController.h  DmsBrowserViewController.mm  DmsBrowserWindowController.h  DmsBrowserWindowController.mm  DmsConfig.hpp  DmsConfig.mm  DmsPlaylistIntegration.h  DmsPlaylistIntegration.mm  DmsPreferencesPage.mm  DmsTreeNode.h  DmsTreeNode.mm  MainMenuCommands.mm  SpikeMetadbHint.mm
component_macos/sdk_check/: SdkCheckComponent.mm
component_macos/smoke/: Fb2kSmokeComponent.mm
docs/: 01_project_goal.md  02_scope_and_non_goals.md  03_architecture.md  04_phase0_cli_design.md  05_core_library_design.md  06_foobar2000_component_plan.md  07_gitlab_milestones.md  08_gitlab_labels.md  09_testing_strategy.md  10_compatibility_plan.md  11_development_workflow.md  12_release_plan.md  13_risks.md  14_grilling_session.md  15_domain_glossary.md  16_handoff_2026-07-03.md  17_macos_toolchain_smoke_test.md  18_handoff_2026-07-03_m3_env_setup.md  19_fb2k_sdk_cmake_check.md  20_m3_grilling_session.md  21_manual_test_checklist.md  22_release_v0.2.0-beta.md  phase0-cli.md
docs/adr/: ADR-001-upnp-object-model.md  ADR-002-protocol-info-parsing.md  ADR-003-naming-conventions.md  ADR-004-url-resolver-api.md  ADR-005-error-model.md  ADR-006-soap-didl-parse-layers.md  ADR-007-resource-selector.md  ADR-008-http-sync-vs-async.md  ADR-009-http-library.md  ADR-010-dependency-management.md  ADR-011-test-framework.md  ADR-012-pagination-strategy.md  ADR-013-macos-build-without-xcode.md  ADR-014-component-ui-architecture.md  ADR-015-server-list-persistence.md  ADR-016-playlist-integration.md  ADR-017-component-threading-model.md  README.md
docs/e2e_records/: 2026-07-17.md  2026-07-18.md
docs/layouts/: README.md  dms_browser_sidebar.txt
gitlab/issues/: 001_initialize_repository_structure.md  002_create_phase0_cli_skeleton.md  003_implement_http_client_with_timeout.md  004_parse_device_description.md  005_implement_url_resolver.md  006_soap_browse_request_builder.md  007_parse_soap_browse_response.md  008_parse_didl_lite.md  009_functional_cli_browse_command.md  010_document_phase0_usage.md
gitlab/labels/: labels.yml
gitlab/milestones/: milestones.md
prompts/: claude_fable5_master_prompt.md
src/cli/: main.cpp
src/component/: BrowsePager.cpp  BrowsePager.hpp  HintFields.cpp  HintFields.hpp  RecursiveBrowseCollector.cpp  RecursiveBrowseCollector.hpp  ServerListStore.cpp  ServerListStore.hpp
src/core/: placeholder.cpp
src/core/http/: HttpClient.cpp  HttpClient.hpp
src/core/upnp/: BrowseTypes.hpp  ContentDirectoryClient.cpp  ContentDirectoryClient.hpp  DeviceDescriptionParser.cpp  DeviceDescriptionParser.hpp  DidlLiteParser.cpp  DidlLiteParser.hpp  ResourceSelector.cpp  ResourceSelector.hpp  SoapBrowseRequestBuilder.cpp  SoapBrowseRequestBuilder.hpp  SoapBrowseResponseParser.cpp  SoapBrowseResponseParser.hpp  UpnpError.hpp  UpnpObject.hpp  UrlResolver.cpp  UrlResolver.hpp
tests/: CMakeLists.txt  TestHelpers.hpp  sanity_test.cpp
tests/adapter/: test_browse_pager.cpp  test_hint_fields.cpp  test_recursive_browse_collector.cpp  test_server_list_store.cpp
tests/e2e/: run_e2e.sh
tests/fixtures/: README.md
tests/fixtures/device_descriptions/: igd_no_contentdirectory.xml  jellyfin_rootDesc.xml  minidlna_rootDesc.xml  urlbase_nested_rootDesc.xml
tests/fixtures/didl_lite/: audio_items.xml  containers.xml  minidlna_133_audio_items.xml  multiple_resources.xml  unicode_titles.xml
tests/fixtures/soap_responses/: browse_response_soapenv_prefix.xml  browse_root_response.xml  minidlna_133_browse_response.xml  soap_fault.xml
tests/http/: test_http_client.cpp
tests/integration/: test_content_directory_client.cpp
tests/model/: test_upnp_object.cpp
tests/parser/: test_device_description_parser.cpp  test_didl_lite_parser.cpp  test_resource_selector.cpp  test_soap_browse_request_builder.cpp  test_soap_browse_response_parser.cpp  test_url_resolver.cpp
tools/: mock_upnp_server.py
